<resources>
    <string name="app_name">AndroidToolBox</string>
    <string name="connexion">Connexion</string>
    <string name="valider">Valider</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="identifiant">Identifiant</string>
    <string name="logo_isen_acueuil">logo_isen_acueuil</string>
    <string name="cycle_de_vie_titre">Cycle de vie</string>
    <string name="logo_isen_home">logo_isen_home</string>
    <string name="bonjour">Bonjour</string>
    <string name="cycle_de_vie">Cycle de vie</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="permissions">Permissions</string>
    <string name="web_services">Web services</string>
    <string name="deconnexion">Deconnexion</string>
    <string name="bouton_cycle_de_vie">bouton_cycle_de_vie</string>
    <string name="bouton_sauvegarde">bouton_sauvegarde</string>
    <string name="bouton_permissions">bouton_permissions</string>
    <string name="bouton_web_services">bouton_web_services</string>
    <string name="nom">Nom.</string>
    <string name="pr_nom">Prénom</string>
    <string name="date">Date</string>
    <string name="sauvegarder">Sauvegarder</string>
    <string name="lecture">lecture</string>
    <string name="date_picker">../../....</string>
    <string name="acc_s_aux_informations_android">Accès aux informations Android</string>
    <string name="contact_de_armand_gazzano">Contact de Armand GAZZANO</string>
    <string name="buton_camera">buton_camera</string>
    <string name="liste_contact">TextView</string>
    <string name="contact_name">TextView</string>
    <string name="profil_pic">TODO</string>
    <string name="user_address">TextView</string>
    <string name="user_mail">TextView</string>
    <string name="type_1_pokemon">type_1_pokemon</string>
    <string name="type_2_pokemon">type_2_pokemon</string>
    <string name="bluetooth_button">bluetooth_button</string>
    <string name="lancer_le_scan_ble">Lancer le scan BLE</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="telephone_non_compatible_avec_le_ble">TELEPHONE NON COMPATIBLE AVEC LE BLE</string>
    <string name="_00">000</string>
    <string name="red">red</string>
    <string name="textview">TextView</string>
    <string name="_10_00">00:00</string>
    <string name="example">example</string>
    <string name="acc_s_g_n_rique">Accès générique</string>
    <string name="en_attente_de_connexion">En attente de connexion</string>
    <string name="_lecture">LECTURE</string>
    <string name="ecrire">ECRIRE</string>
    <string name="notifier">NOTIFIER</string>
    <string name="entrez_une_valeur">Entrez une valeur</string>
    <string name="type">Type :</string>
    <string name="taille">Taille :</string>
    <string name="poids">Poids :</string>
    <string name="id">Id :</string>
    <string name="taux_d_appartition">Taux d\'appartition :</string>
    <string name="pokeball">pokeball</string>
    <string name="pokemon">pokemon</string>
    <string name="type1">type1</string>
    <string name="type2">type2</string>
    <string name="arrow">arrow</string>
    <string name="start_scan">Lancer le scan BLE</string>
    <string name="scanning">Scan en cours ...</string>
    <string name="contacts">Contacts :</string>
</resources>
