<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityHome">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logo_isen_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/isen" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/bonjour"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <ImageButton
        android:id="@+id/lifeCycleButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/bouton_cycle_de_vie"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/vie" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/bouton_sauvegarde"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:srcCompat="@drawable/seve" />

    <ImageButton
        android:id="@+id/permissionsButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/bouton_permissions"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton"
        app:srcCompat="@drawable/security" />

    <ImageButton
        android:id="@+id/wsButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="64dp"
        android:contentDescription="@string/bouton_web_services"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton"
        app:srcCompat="@drawable/web" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cycle_de_vie"
        app:layout_constraintEnd_toEndOf="@+id/lifeCycleButton"
        app:layout_constraintStart_toStartOf="@+id/lifeCycleButton"
        app:layout_constraintTop_toBottomOf="@+id/lifeCycleButton" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sauvegarde"
        app:layout_constraintEnd_toEndOf="@+id/saveButton"
        app:layout_constraintStart_toStartOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/permissions"
        app:layout_constraintEnd_toEndOf="@+id/permissionsButton"
        app:layout_constraintStart_toStartOf="@+id/permissionsButton"
        app:layout_constraintTop_toBottomOf="@+id/permissionsButton" />

    <TextView
        android:id="@+id/Bluetooth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth"
        app:layout_constraintEnd_toEndOf="@+id/bluetoothButton"
        app:layout_constraintStart_toStartOf="@+id/bluetoothButton"
        app:layout_constraintTop_toBottomOf="@+id/bluetoothButton" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/web_services"
        app:layout_constraintEnd_toEndOf="@+id/wsButton"
        app:layout_constraintStart_toStartOf="@+id/wsButton"
        app:layout_constraintTop_toBottomOf="@+id/wsButton" />

    <Button
        android:id="@+id/decoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/deconnexion"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/bluetoothButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/bluetooth_button"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="@+id/wsButton"
        app:layout_constraintStart_toStartOf="@+id/permissionsButton"
        app:layout_constraintTop_toBottomOf="@+id/permissionsButton"
        app:srcCompat="@drawable/bluetooth" />

</androidx.constraintlayout.widget.ConstraintLayout>